--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,14 @@ body {
   color: $secondary;
 }
 
+.container {
+  height: calc(100vh - 80px) !important;
+}
+
+.navbar {
+  height: 80px;
+}
+
 button {
   width: 100%;
 }
