created chatroom shell

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,4 +1,5 @@
 <rtc-navbar></rtc-navbar>
-<p>
-  chat works!
-</p>
+<div class="container-wrapper container d-flex">
+  <rtc-chatroom-list class="w-25"></rtc-chatroom-list>
+  <rtc-chatroom-window class="w-75"></rtc-chatroom-window>
+</div>
