added alerts functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<div class="alert-wrapper">
+  <alert
+    *ngFor="let alert of alerts" 
+    dismissOnTimeout="5000"
+    class="text-center"
+    [type]="alert.type">
+    {{alert.text}}
+  </alert>
+</div>
 <router-outlet></router-outlet>
