--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -22,7 +22,7 @@
       <button 
         type="submit" 
         class="btn btn-primary" 
-        [disabled]="!loginForm.valid">Submit</button>
+        >Submit</button>
     </form>
     <small><a routerLink="/signup">Create your account.</a></small>
   </div>
