--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -40,7 +40,7 @@
       <button 
         type="submit" 
         class="btn btn-primary" 
-        [disabled]="!signupForm.valid">Submit</button>
+        >Submit</button>
     </form>
     <small><a routerLink="/login">Already have an account?</a></small>
   </div>
