--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <span class="navbar-brand">Chat App</span>
     <div class="page-links">
-      <ul class="navbar-nav" *ngIf="!currentUser else loggedOut">
+      <ul class="navbar-nav" *ngIf="currentUser else loggedOut">
         <li class="nav-item">
           <a routerLink="/chat" routerLinkActive="active" class="nav-link">Chat Rooms</a>
         </li>
