--- a/src/app/pages/chat/chat-message/chat-message.component.scss
+++ b/src/app/pages/chat/chat-message/chat-message.component.scss
@@ -7,6 +7,10 @@
     margin-right: 1em;
     height: 50px;
     width: 50px;
+
+    img {
+      height: 50px;
+    }
   }
   .name {
     text-decoration: underline;
